Infrastructure: Changes to get tests passing on Java 17